fix : responsive form on tablet / mobile

--- a/css/modal.css
+++ b/css/modal.css
@@ -537,7 +537,7 @@ footer {
 	}
 	.text-control { font-size: 80%; } /*evite le zoom on focus */
 	.content {
-		width: 95%;
+		max-width: 95%;
 		height: auto;
 		margin: 4% auto 0;
 	}
